--- a/dz.csproj
+++ b/dz.csproj
@@ -3,11 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Antlr4.Runtime.Standard" Version="4.9.0" />
-    <PackageReference Include="LLVMSharp" Version="5.0.0" />
+    <PackageReference Include="LLVMSharp" Version="10.0.0-beta" />
   </ItemGroup>
 
 </Project>
